[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
src= "day01.rs"

[[bin]]
name = "day02"
src= "day02.rs"

[[bin]]
name = "day03"
src= "day03.rs"

[[bin]]
name = "day04"
src= "day04.rs"

[[bin]]
name = "day05"
src= "day05.rs"

[[bin]]
name = "day06"
src= "day06.rs"

[[bin]]
name = "day07"
src= "day07.rs"

[[bin]]
name = "day08"
src= "day08.rs"

[[bin]]
name = "day09"
src= "day09.rs"

[[bin]]
name = "day25"
src= "day25.rs"

[dependencies]
md5 = "0.7.0"
regex = "1.11.1"
